refactor: move some stuff around

--- a/kafka/local.docker-compose.yaml
+++ b/kafka/local.docker-compose.yaml
@@ -15,12 +15,10 @@ services:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
-      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
+      KAFKA_LISTENERS: PLAINTEXT://:9092
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
       ALLOW_PLAINTEXT_LISTENER: yes
 
 volumes:
   zookeeper_data:
-    driver: local
   kafka_data:
-    driver: local
