--- a/reactive/reactiveserver/pom.xml
+++ b/reactive/reactiveserver/pom.xml
@@ -30,6 +30,18 @@
       <artifactId>maven-compiler-plugin</artifactId>
       <version>3.10.1</version>
     </dependency>
+
+    <!-- Utilities -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.12.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.14.0-rc1</version>
+    </dependency>
   </dependencies>
 
   <build>
