--- a/api-gateway/integration/src/main/resources/application.properties
+++ b/api-gateway/integration/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=${GATEWAY_SERVER_PORT:8080}
 
 # Mongo
+spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.host=${GATEWAY_MONGO_HOST:localhost}
 spring.data.mongodb.port=${GATEWAY_MONGO_PORT:27017}
 spring.data.mongodb.database=${GATEWAY_MONGO_DB:gateway}
