--- a/api-gateway/integration/src/main/resources/application.properties
+++ b/api-gateway/integration/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.data.mongodb.port=${GATEWAY_MONGO_PORT:27017}
 spring.data.mongodb.database=${GATEWAY_MONGO_DB:gateway}
 spring.data.mongodb.username=${GATEWAY_MONGO_USERNAME:root}
 spring.data.mongodb.password=${GATEWAY_MONGO_USERNAME:1234}
+
+io.github.tobiasz.security.username=${GATEWAY_AUTH_USERNAME:user}
+io.github.tobiasz.security.password=${GATEWAY_AUTH_PASSWORD:1234}
