fix: clean up some stuff

--- a/api-gateway/integration/src/main/resources/application.properties
+++ b/api-gateway/integration/src/main/resources/application.properties
@@ -10,3 +10,4 @@ spring.data.mongodb.password=${GATEWAY_MONGO_USERNAME:1234}
 
 io.github.tobiasz.security.username=${GATEWAY_AUTH_USERNAME:user}
 io.github.tobiasz.security.password=${GATEWAY_AUTH_PASSWORD:1234}
+io.github.tobiasz.security.user-id-header-name=${GATEWAY_USER_ID_HEADER:user_id}
