--- a/api-gateway/integration/src/main/resources/application.properties
+++ b/api-gateway/integration/src/main/resources/application.properties
@@ -8,6 +8,5 @@ spring.data.mongodb.database=${GATEWAY_MONGO_DB:gateway}
 spring.data.mongodb.username=${GATEWAY_MONGO_USERNAME:root}
 spring.data.mongodb.password=${GATEWAY_MONGO_USERNAME:1234}
 
-io.github.tobiasz.security.username=${GATEWAY_AUTH_USERNAME:user}
-io.github.tobiasz.security.password=${GATEWAY_AUTH_PASSWORD:1234}
 io.github.tobiasz.security.user-id-header-name=${GATEWAY_USER_ID_HEADER:user_id}
+io.github.tobiasz.security.gateway-auth-method=${GATEWAY_AUTH_METHOD:basic}
